Bugs al procesar arreglados y ahora es responsive

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
 
         <div class="results">
             <ul class="results__list">
+                <p class="default__text"> The list of results will appear here once you make a search! Try searching "Pizza" on the search bar</p>
                 <!--
                 <li>
                     <a class="results__link results__link--active" href="#23456">
@@ -196,7 +197,9 @@
 
 
         <div class="recipe">
-
+            <h1 class="recipe__title" id="default__title">
+                <span>Select a Recipe and it will appear here!</span>
+            </h1>
             <!--
             <figure class="recipe__fig">
                 <img src="img/test-1.jpg" alt="Tomato" class="recipe__img">
@@ -345,7 +348,7 @@
             <h2 class="heading-2">My Shopping List</h2>
 
             <ul class="shopping__list">
-
+                <p class="default__text">Add ingredients to the shop cart and they will add up here!</p>
                 <!--
                 <li class="shopping__item">
                     <div class="shopping__count">
