--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://forkifyx.netlify.app/">
+    <meta property="og:title" content="Forkify - Search over a Million Recipes">
+    <meta property="og:description" content="With this web app you can search for over a million recipes from all over the world. Pick your favorite and add the ingredients to the shopping cart.">
+    <meta property="og:image" content="img/forkify-mini.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
